--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h1>Welcome to version controll system</h1> 
 </body>
 </html> 
 <!-- only for the git tutorial purpose ... it is not for a web tutorial part -->
